--- a/resume/index.html
+++ b/resume/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <title>Resume</title>
 </head>
   <body>
@@ -10,27 +11,28 @@
   mrs.lauren.posey@gmail.com<br>
   github.com/laurenposey<br>
   </h1>
+  <div class="objective">
+    <h2>Objective:</h2>
+    <p>Gain a breadth of desktop support experiences to identify specific passions in the tech industry, as the next step in a dynamic career change. Specific skills include:<p>
+    <ul>
+      <li>Comfortable with group or solo work</li>
+      <li>Able to quickly change focus for priority tasks</li>
+      <li>Distilling mass research to concise notes</li>
+      <li>Maintaining holistic view of products</li>
+      <li>Clear verbal and written communication</li>
+    </ul>
 
-  <h2>Objective:</h2>
-  <p>Gain a breadth of desktop support experiences to identify specific passions in the tech industry, as the next step in a dynamic career change. Specific skills include:<p>
-  <ul>
-    <li>Comfortable with group or solo work</li>
-    <li>Able to quickly change focus for priority tasks</li>
-    <li>Distilling mass research to concise notes</li>
-    <li>Maintaining holistic view of products</li>
-    <li>Clear verbal and written communication</li>
-  </ul>
-
-  <h2>Technical Abilities and Skills</h2>
-  <ul>
-    <li>Languages: C#, F#, Python, JavaScript</li>
-    <li>Technology: Git, HTML, XAML, YAML, Jinja2, Mongo.DB, AngularJS</li>
-    <li>Office Software: Atom, Visual Studio, Basic Photoshop, Asana, Jira</li>
-  </ul>
+    <h2>Technical Abilities and Skills</h2>
+    <ul>
+      <li>Languages: C#, F#, Python, JavaScript</li>
+      <li>Technology: Git, HTML, XAML, YAML, Jinja2, Mongo.DB, AngularJS</li>
+      <li>Office Software: Atom, Visual Studio, Basic Photoshop, Asana, Jira</li>
+    </ul>
+  </div>
 
   <h2>Recent Professional History</h2>
 
-  <h3>Software Engineering Intern	May 2015 - Nov 2015	Bright.md</h3>
+  <h3><span class="title">Software Engineering Intern</span>	<span class="dates">May 2015 - Nov 2015</span>	Bright.md</h3>
   <h3>Portland, OR</h3>
   <ul>
     <li>Worked to transform the health industry by building an automated health delivery system, called SmartExam, that formulates diagnoses into a chartnote for a doctor to review,  and with one click send prescriptions to pharmacies, email patient an after visit summary, as well as send a follow up email days after receiving treatment.
@@ -39,16 +41,17 @@
     Demonstrated aptitude to learning new languages on the job by utilizing online learning resources to learn Jinja2, MongoDB, AngularJS, Python, and JavaScript.</li>
     <li>Designed and executed a usability testing project in order to get insight from the perspective of an ill patient  using the system for the first time. I combined usability and AB testing methods in order to gather feedback on our product.</li>
   </ul>
-  <h3>Operations Manager Aug 2012 - Nov 2013 The Kroger Company</h3>
+  <h3><span class="title">Operations Manager</span> <span class="dates">Aug 2012 - Nov 2013</span> The Kroger Company</h3>
   <h3>Atlanta, GA</h3>
   <ul>
     <li>Collaborated with diverse groups to  formulate budgets, project sales, and complete production for Valentine’s Day.</li>
     <li>Lead team of 120 employees in maintaining holistic view of Key Retailing project that entailed training, restructuring, and reorganization of the entire store.</li>
     <li>Marketed slow moving products to move inventory and boost sales by designing and building displays with on hand materials.</li>
   </ul>
-
-  <h3>Education</h3>
-  	<h4>Bachelors of the Arts – English – 3.5 GPA	2007 - 2011</h4>
-  	<h4>Kennesaw State University, Kennesaw, GA</h4>
+  <div class="education">
+    <h3>Education</h3>
+    	<h4>Bachelors of the Arts – English – 3.5 GPA	<span class="dates">2007 - 2011</span></h4>
+    	<h4>Kennesaw State University, Kennesaw, GA</h4>
+    </div>
   </body>
 </html>
